web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
