ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /hello-app
        backend:
          serviceName: web
          servicePort: 8080
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
